Lua binary is now easely configurable

--- a/Lua/binary-trees/Makefile
+++ b/Lua/binary-trees/Makefile
@@ -1,14 +1,16 @@
+BINARY=/usr/bin/lua5.3
+
 compile:
 
 measure:
 	sudo modprobe msr
-	sudo ../../RAPL/main "/usr/local/src/lua-5.3.3/bin/lua  binarytrees.lua-2.lua 21" Lua binary-trees
+	sudo ../../RAPL/main "${BINARY}  binarytrees.lua-2.lua 21" Lua binary-trees
 
 run:
-	/usr/local/src/lua-5.3.3/bin/lua  binarytrees.lua-2.lua 21
+	${BINARY}  binarytrees.lua-2.lua 21
 
 mem:
-	/usr/bin/time -v /usr/local/src/lua-5.3.3/bin/lua  binarytrees.lua-2.lua 21
+	/usr/bin/time -v ${BINARY}  binarytrees.lua-2.lua 21
 
 valgrind:
-	valgrind --tool=massif --stacks=yes /usr/local/src/lua-5.3.3/bin/lua  binarytrees.lua-2.lua 21
+	valgrind --tool=massif --stacks=yes ${BINARY}  binarytrees.lua-2.lua 21
