--- a/Lua/fannkuch-redux/Makefile
+++ b/Lua/fannkuch-redux/Makefile
@@ -1,14 +1,16 @@
+BINARY=/usr/bin/lua5.3
+
 compile:
 
 measure:
 	sudo modprobe msr
-	sudo ../../RAPL/main "/usr/local/src/lua-5.3.3/bin/lua  fannkuchredux.lua 12" Lua fannkuch-redux
+	sudo ../../RAPL/main "${BINARY}  fannkuchredux.lua 12" Lua fannkuch-redux
 
 run:
-	/usr/local/src/lua-5.3.3/bin/lua  fannkuchredux.lua 12
+	${BINARY}  fannkuchredux.lua 12
 
 mem:
-	/usr/bin/time -v /usr/local/src/lua-5.3.3/bin/lua  fannkuchredux.lua 12
+	/usr/bin/time -v ${BINARY}  fannkuchredux.lua 12
 
 valgrind:
-	valgrind --tool=massif --stacks=yes /usr/local/src/lua-5.3.3/bin/lua  fannkuchredux.lua 12
+	valgrind --tool=massif --stacks=yes ${BINARY}  fannkuchredux.lua 12
