--- a/Lua/n-body/Makefile
+++ b/Lua/n-body/Makefile
@@ -1,14 +1,16 @@
+BINARY=/usr/bin/lua5.3
+
 compile:
 
 measure:
 	sudo modprobe msr
-	sudo ../../RAPL/main "/usr/local/src/lua-5.3.3/bin/lua  nbody.lua-2.lua 50000000" Lua n-body
+	sudo ../../RAPL/main "${BINARY}  nbody.lua-2.lua 50000000" Lua n-body
 
 run:
-	/usr/local/src/lua-5.3.3/bin/lua  nbody.lua-2.lua 50000000
+	${BINARY}  nbody.lua-2.lua 50000000
 
 mem:
-	/usr/bin/time -v  /usr/local/src/lua-5.3.3/bin/lua  nbody.lua-2.lua 50000000
+	/usr/bin/time -v  ${BINARY}  nbody.lua-2.lua 50000000
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  /usr/local/src/lua-5.3.3/bin/lua  nbody.lua-2.lua 50000000
+	valgrind --tool=massif --stacks=yes  ${BINARY}  nbody.lua-2.lua 50000000
