--- a/Lua/regex-redux/Makefile
+++ b/Lua/regex-redux/Makefile
@@ -1,14 +1,16 @@
+BINARY=/usr/bin/lua5.3
+
 compile:
 
 xmeasure:
 	sudo modprobe msr
-	sudo ../../RAPL/main "/usr/local/src/lua-5.3.3/bin/lua  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt" Lua regex-redux
+	sudo ../../RAPL/main "${BINARY}  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt" Lua regex-redux
 
 run:
-	/usr/local/src/lua-5.3.3/bin/lua  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
+	${BINARY}  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
 
 mem:
-	/usr/bin/time -v /usr/local/src/lua-5.3.3/bin/lua  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
+	/usr/bin/time -v ${BINARY}  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes /usr/local/src/lua-5.3.3/bin/lua  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
+	valgrind --tool=massif --stacks=yes ${BINARY}  regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
