Updated rapl dockerfile with run.sh and workdir

--- a/RAPL/Dockerfile
+++ b/RAPL/Dockerfile
@@ -1,4 +1,8 @@
 FROM alpine:3
 
+WORKDIR /root
+COPY ./code /opt/rapl
+COPY ./run.sh /root
 RUN apk add kmod
-COPY . /opt/rapl
+
+CMD ["sh", "run.sh"]
