Creating compile_all.py in rapl, so it doesn't need to exist in every damn folder

--- a/rapl/Dockerfile
+++ b/rapl/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:3
 WORKDIR /root
 COPY ./code /opt/rapl
 COPY ./run.sh /root
+COPY ./compile_all.py /root
 RUN apk add kmod make python3
 
 CMD ["sh", "run.sh"]
