--- a/swift/reverse-complement/Makefile
+++ b/swift/reverse-complement/Makefile
@@ -3,13 +3,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./revcomp.swift_run 0 < ../../revcomp-input25000000.txt" Swift reverse-complement
+	sudo /opt/rapl/main "./revcomp.swift_run 0 < /root/data/revcomp-input25000000.txt" Swift reverse-complement
 
 run:
-	./revcomp.swift_run 0 < ../../revcomp-input25000000.txt
+	./revcomp.swift_run 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v  ./revcomp.swift_run 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v  ./revcomp.swift_run 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  ./revcomp.swift_run 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes  ./revcomp.swift_run 0 < /root/data/revcomp-input25000000.txt
