--- a/ada/reverse-complement/Makefile
+++ b/ada/reverse-complement/Makefile
@@ -9,13 +9,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./revcomp.gnat-2.gnat_run 0 < ../../revcomp-input25000000.txt" Ada reverse-complement
+	sudo /opt/rapl/main "./revcomp.gnat-2.gnat_run 0 < /root/data/revcomp-input25000000.txt" Ada reverse-complement
 
 run:
-	./revcomp.gnat-2.gnat_run 0 < ../../revcomp-input25000000.txt
+	./revcomp.gnat-2.gnat_run 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v ./revcomp.gnat-2.gnat_run 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v ./revcomp.gnat-2.gnat_run 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes ./revcomp.gnat-2.gnat_run 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes ./revcomp.gnat-2.gnat_run 0 < /root/data/revcomp-input25000000.txt
