--- a/dart/regex-redux/Makefile
+++ b/dart/regex-redux/Makefile
@@ -2,13 +2,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "/usr/bin/dart  regexredux.dart-2.dart 0 < ../../regexredux-input5000000.txt" Dart regex-redux
+	sudo /opt/rapl/main "/usr/bin/dart  regexredux.dart-2.dart 0 < /root/data/regexredux-input5000000.txt" Dart regex-redux
 
 run:
-	/usr/bin/dart  regexredux.dart-2.dart 0 < ../../regexredux-input5000000.txt
+	/usr/bin/dart  regexredux.dart-2.dart 0 < /root/data/regexredux-input5000000.txt
 
 mem:
-	/usr/bin/time -v  /usr/bin/dart  regexredux.dart-2.dart 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v  /usr/bin/dart  regexredux.dart-2.dart 0 < /root/data/regexredux-input5000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  /usr/bin/dart  regexredux.dart-2.dart 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes  /usr/bin/dart  regexredux.dart-2.dart 0 < /root/data/regexredux-input5000000.txt
