--- a/erlang/reverse-complement/Makefile
+++ b/erlang/reverse-complement/Makefile
@@ -3,13 +3,13 @@ compile:
 	${COMPILER} +native +"{hipe, [o3]}" revcomp.erl
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -smp enable -noshell -run  revcomp main 0 < ../../revcomp-input25000000.txt" Erlang reverse-complement
+	sudo /opt/rapl/main "${BINARY} -smp enable -noshell -run  revcomp main 0 < /root/data/revcomp-input25000000.txt" Erlang reverse-complement
 
 run:
-	${BINARY} -smp enable -noshell -run  revcomp main 0 < ../../revcomp-input25000000.txt
+	${BINARY} -smp enable -noshell -run  revcomp main 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v ${BINARY} -smp enable -noshell -run  revcomp main 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v ${BINARY} -smp enable -noshell -run  revcomp main 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} -smp enable -noshell -run  revcomp main 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes ${BINARY} -smp enable -noshell -run  revcomp main 0 < /root/data/revcomp-input25000000.txt
