--- a/go/regex-redux/Makefile
+++ b/go/regex-redux/Makefile
@@ -3,13 +3,13 @@ compile:
 
 xmeasure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./regexredux.go-2.go_run 0 < ../../regexredux-input5000000.txt" Go regex-redux
+	sudo /opt/rapl/main "./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt" Go regex-redux
 
 run:
-	./regexredux.go-2.go_run 0 < ../../regexredux-input5000000.txt
+	./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt
 
 mem:
-	/usr/bin/time -v ./regexredux.go-2.go_run 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v ./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes ./regexredux.go-2.go_run 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes ./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt
