--- a/go/reverse-complement/Makefile
+++ b/go/reverse-complement/Makefile
@@ -3,13 +3,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./revcomp.go-6.go_run 0 < ../../revcomp-input25000000.txt" Go reverse-complement
+	sudo /opt/rapl/main "./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt" Go reverse-complement
 
 run:
-	./revcomp.go-6.go_run 0 < ../../revcomp-input25000000.txt
+	./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v   ./revcomp.go-6.go_run 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v   ./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes   ./revcomp.go-6.go_run 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes   ./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt
