--- a/hack/regex-redux/Makefile
+++ b/hack/regex-redux/Makefile
@@ -3,15 +3,15 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "/usr/bin/hhvm  regexredux.hack 0 < ../../regexredux-input5000000.txt" Hack regex-redux
+	sudo /opt/rapl/main "/usr/bin/hhvm  regexredux.hack 0 < /root/data/regexredux-input5000000.txt" Hack regex-redux
 
 run:
-	/usr/bin/hhvm  regexredux.hack 0 < ../../regexredux-input5000000.txt
+	/usr/bin/hhvm  regexredux.hack 0 < /root/data/regexredux-input5000000.txt
 	killall hh_server
 mem:
-	/usr/bin/time -v /usr/bin/hhvm  regexredux.hack 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v /usr/bin/hhvm  regexredux.hack 0 < /root/data/regexredux-input5000000.txt
 	 killall hh_server
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  /usr/bin/hhvm  regexredux.hack 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes  /usr/bin/hhvm  regexredux.hack 0 < /root/data/regexredux-input5000000.txt
 	 killall hh_server
