--- a/lisp/regex-redux/Makefile
+++ b/lisp/regex-redux/Makefile
@@ -5,13 +5,13 @@ compile:
 
 xmeasure:
 	sudo modprobe msr
-	#sudo /opt/rapl/main "sbcl --noinform --core regexredux.core < 0 < ../../regexredux-input5000000.txt" Lisp regex-redux
+	#sudo /opt/rapl/main "sbcl --noinform --core regexredux.core < 0 < /root/data/regexredux-input5000000.txt" Lisp regex-redux
 
 clean:
 	rm -rf *core
 
 mem:
-	/usr/bin/time -v regexredux.core < 0 < ../../regexredux-input5000000.txt Lisp regex-redux
+	/usr/bin/time -v regexredux.core < 0 < /root/data/regexredux-input5000000.txt Lisp regex-redux
 
 valgrind:
-	valgrind --tool=massif --stacks=yes sbcl --noinform --core regexredux.core < 0 < ../../regexredux-input5000000.txt Lisp regex-redux
+	valgrind --tool=massif --stacks=yes sbcl --noinform --core regexredux.core < 0 < /root/data/regexredux-input5000000.txt Lisp regex-redux
