--- a/ocaml/regex-redux/Makefile
+++ b/ocaml/regex-redux/Makefile
@@ -4,13 +4,13 @@ compile:
 	rm regexredux.ocaml-2.ml
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./regexredux.ocaml-2.ocaml_run 0 < ../../regexredux-input5000000.txt" OCaml regex-redux
+	sudo /opt/rapl/main "./regexredux.ocaml-2.ocaml_run 0 < /root/data/regexredux-input5000000.txt" OCaml regex-redux
 
 run:
-	./regexredux.ocaml-2.ocaml_run 0 < ../../regexredux-input5000000.txt
+	./regexredux.ocaml-2.ocaml_run 0 < /root/data/regexredux-input5000000.txt
 
 mem:
-	/usr/bin/time -v  /usr/bin/time -v  /usr/bin/time -v  ./regexredux.ocaml-2.ocaml_run 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v  /usr/bin/time -v  /usr/bin/time -v  ./regexredux.ocaml-2.ocaml_run 0 < /root/data/regexredux-input5000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  /usr/bin/time -v  ./regexredux.ocaml-2.ocaml_run 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes  /usr/bin/time -v  ./regexredux.ocaml-2.ocaml_run 0 < /root/data/regexredux-input5000000.txt
