--- a/ocaml/reverse-complement/Makefile
+++ b/ocaml/reverse-complement/Makefile
@@ -3,13 +3,13 @@ compile:
 	ocamlopt -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa revcomp.ocaml-3.ml -o revcomp.ocaml-3.ocaml_run
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./revcomp.ocaml-3.ocaml_run 0 < ../../revcomp-input25000000.txt" OCaml reverse-complement
+	sudo /opt/rapl/main "./revcomp.ocaml-3.ocaml_run 0 < /root/data/revcomp-input25000000.txt" OCaml reverse-complement
 
 run:
-	./revcomp.ocaml-3.ocaml_run 0 < ../../revcomp-input25000000.txt
+	./revcomp.ocaml-3.ocaml_run 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v  ./revcomp.ocaml-3.ocaml_run 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v  ./revcomp.ocaml-3.ocaml_run 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes  ./revcomp.ocaml-3.ocaml_run 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes  ./revcomp.ocaml-3.ocaml_run 0 < /root/data/revcomp-input25000000.txt
