--- a/perl/reverse-complement/Makefile
+++ b/perl/reverse-complement/Makefile
@@ -2,13 +2,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} revcomp.perl-3.perl 0 < ../../revcomp-input25000000.txt" Perl reverse-complement
+	sudo /opt/rapl/main "${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt" Perl reverse-complement
 
 run:
-	${BINARY} revcomp.perl-3.perl 0 < ../../revcomp-input25000000.txt
+	${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v ${BINARY} revcomp.perl-3.perl 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v ${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} revcomp.perl-3.perl 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes ${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
