--- a/php/regex-redux/Makefile
+++ b/php/regex-redux/Makefile
@@ -2,13 +2,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "php -d memory_limit=512M regexredux.php 0 < ../../regexredux-input5000000.txt" PHP regex-redux
+	sudo /opt/rapl/main "php -d memory_limit=512M regexredux.php 0 < /root/data/regexredux-input5000000.txt" PHP regex-redux
 
 run:
-	php -d memory_limit=512M regexredux.php 0 < ../../regexredux-input5000000.txt
+	php -d memory_limit=512M regexredux.php 0 < /root/data/regexredux-input5000000.txt
 
 mem:
-	/usr/bin/time -v php -d memory_limit=512M regexredux.php 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v php -d memory_limit=512M regexredux.php 0 < /root/data/regexredux-input5000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes php -d memory_limit=512M regexredux.php 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes php -d memory_limit=512M regexredux.php 0 < /root/data/regexredux-input5000000.txt
