--- a/php/reverse-complement/Makefile
+++ b/php/reverse-complement/Makefile
@@ -2,16 +2,16 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "php -n -d memory_limit=1024M revcomp.php-3.php 0 < ../../revcomp-input25000000.txt" PHP reverse-complement
+	sudo /opt/rapl/main "php -n -d memory_limit=1024M revcomp.php-3.php 0 < /root/data/revcomp-input25000000.txt" PHP reverse-complement
 
 run:
-	php -n -d memory_limit=1024M revcomp.php-3.php 0 < ../../revcomp-input25000000.txt
+	php -n -d memory_limit=1024M revcomp.php-3.php 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v php -n -d memory_limit=1024M revcomp.php-3.php 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v php -n -d memory_limit=1024M revcomp.php-3.php 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes php -n -d memory_limit=1024M revcomp.php-3.php 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes php -n -d memory_limit=1024M revcomp.php-3.php 0 < /root/data/revcomp-input25000000.txt
 
 
 
