--- a/python3/reverse-complement/Makefile
+++ b/python3/reverse-complement/Makefile
@@ -2,11 +2,11 @@ compile:
 	cp revcomp.python3-6.python3 revcomp.python3-6.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < ../../revcomp-input25000000.txt" Python reverse-complement
+	sudo /opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt" Python reverse-complement
 
 run:
-	${BINARY} -OO revcomp.python3-6.py 0 < ../../revcomp-input25000000.txt
+	${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v ${BINARY} -OO revcomp.python3-6.py 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v ${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt
 
