--- a/racket/regex-redux/Makefile
+++ b/racket/regex-redux/Makefile
@@ -3,13 +3,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "/usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < ../../regexredux-input5000000.txt" Racket regex-redux
+	sudo /opt/rapl/main "/usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < /root/data/regexredux-input5000000.txt" Racket regex-redux
 
 run:
-	/usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < ../../regexredux-input5000000.txt
+	/usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < /root/data/regexredux-input5000000.txt
 
 mem:
-	/usr/bin/time -v /usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < ../../regexredux-input5000000.txt
+	/usr/bin/time -v /usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < /root/data/regexredux-input5000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes /usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < ../../regexredux-input5000000.txt
+	valgrind --tool=massif --stacks=yes /usr/local/src/racket-6.8/bin/racket ./compiled/regexredux_racket.zo 0 < /root/data/regexredux-input5000000.txt
