--- a/rust/reverse-complement/Makefile
+++ b/rust/reverse-complement/Makefile
@@ -3,13 +3,13 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "./revcomp.rust-2.rust_run 0 < ../../revcomp-input25000000.txt" Rust reverse-complement
+	sudo /opt/rapl/main "./revcomp.rust-2.rust_run 0 < /root/data/revcomp-input25000000.txt" Rust reverse-complement
 
 run:
-	./revcomp.rust-2.rust_run 0 < ../../revcomp-input25000000.txt
+	./revcomp.rust-2.rust_run 0 < /root/data/revcomp-input25000000.txt
 
 mem:
-	/usr/bin/time -v ./revcomp.rust-2.rust_run 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v ./revcomp.rust-2.rust_run 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes ./revcomp.rust-2.rust_run 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes ./revcomp.rust-2.rust_run 0 < /root/data/revcomp-input25000000.txt
