--- a/smalltalk/reverse-complement/Makefile
+++ b/smalltalk/reverse-complement/Makefile
@@ -3,7 +3,7 @@ compile:
 
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "/usr/local/src/vw8.1.1pul/bin/linuxx86_64/vwlinuxx86_64 /usr/local/src/vw8.1.1pul/image/benchmarks.im -nogui -evaluate \"Tests revcomp\" -a 0 < ../../revcomp-input25000000.txt" Smalltalk reverse-complement
+	sudo /opt/rapl/main "/usr/local/src/vw8.1.1pul/bin/linuxx86_64/vwlinuxx86_64 /usr/local/src/vw8.1.1pul/image/benchmarks.im -nogui -evaluate \"Tests revcomp\" -a 0 < /root/data/revcomp-input25000000.txt" Smalltalk reverse-complement
 
 run:
-	/usr/local/src/vw8.1.1pul/bin/linuxx86_64/vwlinuxx86_64 /usr/local/src/vw8.1.1pul/image/benchmarks.im -nogui -evaluate \"Tests revcomp\" -a 0 < ../../revcomp-input25000000.txt
+	/usr/local/src/vw8.1.1pul/bin/linuxx86_64/vwlinuxx86_64 /usr/local/src/vw8.1.1pul/image/benchmarks.im -nogui -evaluate \"Tests revcomp\" -a 0 < /root/data/revcomp-input25000000.txt
