--- a/typescript/reverse-complement/Makefile
+++ b/typescript/reverse-complement/Makefile
@@ -4,16 +4,16 @@ compile:
 
 xmeasure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "/usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < ../../revcomp-input25000000.txt" TypeScript reverse-complement
+	sudo /opt/rapl/main "/usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < /root/data/revcomp-input25000000.txt" TypeScript reverse-complement
 
 run:
-	/usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < ../../revcomp-input25000000.txt
+	/usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < /root/data/revcomp-input25000000.txt
 
 clean:
 	rm -rf *.js *.ts
 
 mem:
-	/usr/bin/time -v /usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < ../../revcomp-input25000000.txt
+	/usr/bin/time -v /usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < /root/data/revcomp-input25000000.txt
 
 valgrind:
-	valgrind --tool=massif --stacks=yes /usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < ../../revcomp-input25000000.txt
+	valgrind --tool=massif --stacks=yes /usr/local/src/node-v7.9.0-linux-x64/bin/node --use_strict revcomp.js 0 < /root/data/revcomp-input25000000.txt
