--- a/ocaml/fannkuch-redux/Makefile
+++ b/ocaml/fannkuch-redux/Makefile
@@ -1,6 +1,6 @@
 compile:
 	cp fannkuchredux.ocaml-4.ocaml fannkuchredux.ocaml-4.ml
-	ocamlopt -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa fannkuchredux.ocaml-4.ml -o fannkuchredux.ocaml-4.ocaml_run
+	${COMPILER} -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa fannkuchredux.ocaml-4.ml -o fannkuchredux.ocaml-4.ocaml_run
 	rm fannkuchredux.ocaml-4.ml
 
 measure:
