--- a/ocaml/pidigits/Makefile
+++ b/ocaml/pidigits/Makefile
@@ -1,6 +1,6 @@
 compile:
 	cp pidigits.ocaml-3.ocaml pidigits.ocaml-3.ml
-	ocamlopt -noassert -unsafe -fPIC -nodynlink -inline 100 -I /usr/local/lib/ocaml/gmp gmp.cmxa pidigits.ocaml-3.ml -o pidigits.ocaml-3.ocaml_run
+	${COMPILER} -noassert -unsafe -fPIC -nodynlink -inline 100 -I /usr/local/lib/ocaml/gmp gmp.cmxa pidigits.ocaml-3.ml -o pidigits.ocaml-3.ocaml_run
 	rm pidigits.ocaml-3.ml
 
 xmeasure:
