--- a/ocaml/reverse-complement/Makefile
+++ b/ocaml/reverse-complement/Makefile
@@ -1,6 +1,6 @@
 compile:
 	cp revcomp.ocaml-3.ocaml revcomp.ocaml-3.ml
-	ocamlopt -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa revcomp.ocaml-3.ml -o revcomp.ocaml-3.ocaml_run
+	${COMPILER} -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa revcomp.ocaml-3.ml -o revcomp.ocaml-3.ocaml_run
 measure:
 	sudo modprobe msr
 	sudo /opt/rapl/main "./revcomp.ocaml-3.ocaml_run 0 < /root/data/revcomp-input25000000.txt" OCaml reverse-complement
