--- a/python2/regex-redux/Makefile
+++ b/python2/regex-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp regexredux.python3 regexredux.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt" Python regex-redux
+	sudo /opt/rapl/main "${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt" /opt/result/python2 regex-redux
 
 run:
 	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt
