--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp fannkuchredux.python3-4.python3 fannkuchredux.python3-4.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO fannkuchredux.python3-4.py 12" Python fannkuch-redux
+	sudo /opt/rapl/main "${BINARY} -OO fannkuchredux.python3-4.py 12" /opt/result/python2 fannkuch-redux
 
 run:
 	${BINARY} -OO fannkuchredux.python3-4.py 12
