--- a/python2/k-nucleotide/Makefile
+++ b/python2/k-nucleotide/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp knucleotide.python3-3.python3 knucleotide.python3-3.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt" Python k-nucleotide
+	sudo /opt/rapl/main "${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt" /opt/result/python2 k-nucleotide
 
 run:
 	${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt
