--- a/python2/reverse-complement/Makefile
+++ b/python2/reverse-complement/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp revcomp.python3-6.python3 revcomp.python3-6.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt" Python reverse-complement
+	sudo /opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt" /opt/result/python2 reverse-complement
 
 run:
 	${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt
