--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -1,8 +1,9 @@
 compile:
-	cp fannkuchredux.python3-4.python3 fannkuchredux.python3-4.py
+	echo "python2: nothing to compile"
+
 measure:
-	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO fannkuchredux.python3-4.py 12" /opt/result/python2 fannkuch-redux
+	modprobe msr
+	/opt/rapl/main "${BINARY} -OO fannkuchredux.python3-4.py 12" /opt/result/python2 fannkuch-redux
 
 run:
 	${BINARY} -OO fannkuchredux.python3-4.py 12
