--- a/python2/mandelbrot/Makefile
+++ b/python2/mandelbrot/Makefile
@@ -1,8 +1,9 @@
 cmpile:
-	cp mandelbrot.python3-7.python3 mandelbrot.python3-7.py
+	echo "python2: nothing to compile"
+
 measure:
-	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO mandelbrot.python3-7.py 16000" /opt/result/python2 mandelbrot
+	modprobe msr
+	/opt/rapl/main "${BINARY} -OO mandelbrot.python3-7.py 16000" /opt/result/python2 mandelbrot
 
 run:
 	${BINARY} -OO mandelbrot.python3-7.py 16000
