--- a/python2/n-body/Makefile
+++ b/python2/n-body/Makefile
@@ -1,8 +1,9 @@
 compile:
-	cp nbody.python3 nbody.py
+	echo "python2: nothing to compile"
+
 measure:
-	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO nbody.py 50000000" /opt/result/python2 n-body
+	modprobe msr
+	/opt/rapl/main "${BINARY} -OO nbody.py 50000000" /opt/result/python2 n-body
 
 run:
 	${BINARY} -OO nbody.py 50000000
