--- a/python2/pidigits/Makefile
+++ b/python2/pidigits/Makefile
@@ -1,8 +1,9 @@
 compile:
-	cp pidigits.python3-2.python3 pidigits.python3-2.py
+	echo "python2: nothing to compile"
+
 measure:
-	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO pidigits.python3-2.py 10000" /opt/result/python2 pidigits
+	modprobe msr
+	/opt/rapl/main "${BINARY} -OO pidigits.python3-2.py 10000" /opt/result/python2 pidigits
 
 run:
 	${BINARY} -OO pidigits.python3-2.py 10000
