--- a/python2/reverse-complement/Makefile
+++ b/python2/reverse-complement/Makefile
@@ -1,8 +1,9 @@
 compile:
-	cp revcomp.python3-6.python3 revcomp.python3-6.py
+	echo "python2: nothing to compile"
+
 measure:
-	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt" /opt/result/python2 reverse-complement
+	modprobe msr
+	/opt/rapl/main "${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt" /opt/result/python2 reverse-complement
 
 run:
 	${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt
