Removes output file before running; Removed mem command; Creates output file with lang name

--- a/python2/binary-trees/Makefile
+++ b/python2/binary-trees/Makefile
@@ -1,12 +1,8 @@
 compile:
 	echo "python2: nothing to compile"
 
-measure:
-	modprobe msr
-	/opt/rapl/main "${BINARY} -OO binarytrees.py 21" /opt/result/python2 binary-trees
-
 run:
 	${BINARY} -OO binarytrees.py 21
 
-mem:
-	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21
+measure:
+	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> >> /opt/result/${TLANG}.txt
