--- a/python2/pidigits/Makefile
+++ b/python2/pidigits/Makefile
@@ -1,11 +1,8 @@
 compile:
 	echo "python2: nothing to compile"
 
-measure:
-	modprobe msr
-	/opt/rapl/main "${BINARY} -OO pidigits.python3-2.py 10000" /opt/result/python2 pidigits
-
 run:
 	${BINARY} -OO pidigits.python3-2.py 10000
-mem:
-	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000
+
+measure:
+	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000 >> >> /opt/result/${TLANG}.txt
