--- a/python2/Dockerfile
+++ b/python2/Dockerfile
@@ -1,6 +1,8 @@
 FROM energy/base:1
 
 ENV BINARY=/usr/bin/python2
+ENV TLANG=python2
+
 COPY . .
 RUN apk add python2
 RUN /usr/bin/python3 compile_all.py compile
