--- a/python2/binary-trees/Makefile
+++ b/python2/binary-trees/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO binarytrees.py 21
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> /opt/result/${TLANG}.txt
