--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO fannkuchredux.python3-4.py 12
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/result/${TLANG}.txt
