--- a/python2/mandelbrot/Makefile
+++ b/python2/mandelbrot/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO mandelbrot.python3-7.py 16000
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/result/${TLANG}.txt
