--- a/python2/pidigits/Makefile
+++ b/python2/pidigits/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO pidigits.python3-2.py 10000
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000 >> /opt/result/${TLANG}.txt
