--- a/python2/regex-redux/Makefile
+++ b/python2/regex-redux/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> /opt/result/${TLANG}.txt
