--- a/python2/spectral-norm/Makefile
+++ b/python2/spectral-norm/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO spectralnorm.python3-5.py 5500
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO spectralnorm.python3-5.py 5500 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO spectralnorm.python3-5.py 5500 >> /opt/result/${TLANG}.txt
