--- a/python2/n-body/Makefile
+++ b/python2/n-body/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO nbody.py 50000000
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO nbody.py 50000000 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO nbody.py 50000000 >> /opt/result/${TLANG}.txt
