--- a/python2/reverse-complement/Makefile
+++ b/python2/reverse-complement/Makefile
@@ -5,5 +5,5 @@ run:
 	${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO revcomp.python3-6.py 0 < /root/data/revcomp-input25000000.txt >> /opt/result/${TLANG}.txt
 
