We now use two folders to store results: results and measures; results holds the results for run and measures for measure command.

--- a/python2/binary-trees/Makefile
+++ b/python2/binary-trees/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO binarytrees.py 21
+	${BINARY} -OO binarytrees.py 21 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> /opt/measures/${TLANG}.txt
