--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO fannkuchredux.python3-4.py 12
+	${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/measures/${TLANG}.txt
