--- a/python2/mandelbrot/Makefile
+++ b/python2/mandelbrot/Makefile
@@ -2,7 +2,7 @@ cmpile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO mandelbrot.python3-7.py 16000
+	${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/measures/${TLANG}.txt
