--- a/python2/regex-redux/Makefile
+++ b/python2/regex-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt
+	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> /opt/measures/${TLANG}.txt
