--- a/python2/k-nucleotide/Makefile
+++ b/python2/k-nucleotide/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt
+	${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/measures/${TLANG}.txt
