--- a/python2/n-body/Makefile
+++ b/python2/n-body/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO nbody.py 50000000
+	${BINARY} -OO nbody.py 50000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO nbody.py 50000000 >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v ${BINARY} -OO nbody.py 50000000 >> /opt/measures/${TLANG}.txt
