Directing run output to file - python3

--- a/python3/binary-trees/Makefile
+++ b/python3/binary-trees/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp binarytrees.python3 binarytrees.py
 
 run:
-	${BINARY} -OO binarytrees.py 21
+	${BINARY} -OO binarytrees.py 21 >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21
