--- a/python3/fannkuch-redux/Makefile
+++ b/python3/fannkuch-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp fannkuchredux.python3-4.python3 fannkuchredux.python3-4.py
 
 run:
-	${BINARY} -OO fannkuchredux.python3-4.py 12
+	${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12
