--- a/python3/mandelbrot/Makefile
+++ b/python3/mandelbrot/Makefile
@@ -2,7 +2,7 @@ cmpile:
 	cp mandelbrot.python3-7.python3 mandelbrot.python3-7.py
 
 run:
-	${BINARY} -OO mandelbrot.python3-7.py 16000
+	${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000
