--- a/python3/n-body/Makefile
+++ b/python3/n-body/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp nbody.python3 nbody.py
 
 run:
-	${BINARY} -OO nbody.py 50000000
+	${BINARY} -OO nbody.py 50000000 >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO nbody.py 50000000
