--- a/python3/regex-redux/Makefile
+++ b/python3/regex-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp regexredux.python3 regexredux.py
 
 run:
-	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt
+	${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO regexredux.py 0 < /root/data/regexredux-input5000000.txt
