Adding mesure pipe to python3

--- a/python3/fannkuch-redux/Makefile
+++ b/python3/fannkuch-redux/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12
+	/usr/bin/time -v ${BINARY} -OO fannkuchredux.python3-4.py 12 >> /opt/measures/${TLANG}.txt
