--- a/python3/k-nucleotide/Makefile
+++ b/python3/k-nucleotide/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt
+	/usr/bin/time -v ${BINARY} -OO knucleotide.python3-3.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/measures/${TLANG}.txt
