--- a/python3/pidigits/Makefile
+++ b/python3/pidigits/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO pidigits.python3-2.py 10000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000
+	/usr/bin/time -v ${BINARY} -OO pidigits.python3-2.py 10000 >> /opt/measures/${TLANG}.txt
