--- a/python3/binary-trees/Makefile
+++ b/python3/binary-trees/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO binarytrees.py 21 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21
+	/usr/bin/time -v ${BINARY} -OO binarytrees.py 21 >> /opt/measures/${TLANG}.txt
