--- a/python3/mandelbrot/Makefile
+++ b/python3/mandelbrot/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000
+	/usr/bin/time -v ${BINARY} -OO mandelbrot.python3-7.py 16000 >> /opt/measures/${TLANG}.txt
