Updates lua51 makefile; removing mem

--- a/lua51/Dockerfile
+++ b/lua51/Dockerfile
@@ -1,6 +1,8 @@
 FROM energy/base:1
 
 ENV BINARY=/usr/bin/lua5.1
+ENV TLANG=lua51
+
 COPY . .
 RUN apk add lua5.1
 RUN /usr/bin/python3 compile_all.py compile
