Adding measure output pipe

--- a/lua51/fannkuch-redux/Makefile
+++ b/lua51/fannkuch-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua51: nothing to do"
 
 run:
-	${BINARY} fannkuchredux.lua 12
+	${BINARY} fannkuchredux.lua 12 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} fannkuchredux.lua 12
+	/usr/bin/time -v ${BINARY} fannkuchredux.lua 12 >> /opt/measures/${TLANG}.txt
