--- a/lua51/n-body/Makefile
+++ b/lua51/n-body/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua51: nothing to do"
 
 run:
-	${BINARY} nbody.lua-2.lua 50000000
+	${BINARY} nbody.lua-2.lua 50000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v  ${BINARY} nbody.lua-2.lua 50000000
+	/usr/bin/time -v  ${BINARY} nbody.lua-2.lua 50000000 >> /opt/measures/${TLANG}.txt
