--- a/lua51/regex-redux/Makefile
+++ b/lua51/regex-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua51: nothing to do"
 
 run:
-	${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
+	${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
+	/usr/bin/time -v ${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt >> /opt/measures/${TLANG}.txt
