--- a/lua51/reverse-complement/Makefile
+++ b/lua51/reverse-complement/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua51: nothing to do"
 
 run:
-	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
+	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
+	/usr/bin/time -v ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt >> /opt/measures/${TLANG}.txt
