--- a/lua53/binary-trees/Makefile
+++ b/lua53/binary-trees/Makefile
@@ -1,14 +1,8 @@
-
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} binarytrees.lua-2.lua 21" Lua binary-trees
+	echo "lua53: nothing to do"
 
 run:
 	${BINARY} binarytrees.lua-2.lua 21
 
-mem:
+measure:
 	/usr/bin/time -v ${BINARY} binarytrees.lua-2.lua 21
-
-valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} binarytrees.lua-2.lua 21
