--- a/lua53/fannkuch-redux/Makefile
+++ b/lua53/fannkuch-redux/Makefile
@@ -1,14 +1,8 @@
-
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} fannkuchredux.lua 12" Lua fannkuch-redux
+	echo "lua53: nothing to do"
 
 run:
 	${BINARY} fannkuchredux.lua 12
 
-mem:
+measure:
 	/usr/bin/time -v ${BINARY} fannkuchredux.lua 12
-
-valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} fannkuchredux.lua 12
