--- a/lua53/pidigits/Makefile
+++ b/lua53/pidigits/Makefile
@@ -1,16 +1,8 @@
-
 compile:
-
-xmeasure:
-	/opt/rapl/main "${BINARY} pidigits.lua-5.lua 10000" Lua pidigits
+	echo "lua53: nothing to do"
 
 run:
 	${BINARY} pidigits.lua-5.lua 10000
 
-mem:
+measure:
 	/usr/bin/time -v ${BINARY} pidigits.lua-5.lua 10000
-
-
-valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} pidigits.lua-5.lua 10000
-
