--- a/lua53/mandelbrot/Makefile
+++ b/lua53/mandelbrot/Makefile
@@ -1,14 +1,8 @@
-
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} mandelbrot.lua-6.lua 16000" Lua mandelbrot
+	echo "lua53: nothing to do"
 
 run:
 	${BINARY} mandelbrot.lua-6.lua 16000
 
-mem:
+measure:
 	/usr/bin/time -v  ${BINARY} mandelbrot.lua-6.lua 16000
-
-valgrind:
-	valgrind --tool=massif --stacks=yes  ${BINARY} mandelbrot.lua-6.lua 16000
