Adding measures pipe to lua53

--- a/lua53/mandelbrot/Makefile
+++ b/lua53/mandelbrot/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} mandelbrot.lua-6.lua 16000
+	${BINARY} mandelbrot.lua-6.lua 16000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v  ${BINARY} mandelbrot.lua-6.lua 16000
+	/usr/bin/time -v  ${BINARY} mandelbrot.lua-6.lua 16000 >> /opt/measures/${TLANG}.txt
