--- a/lua53/binary-trees/Makefile
+++ b/lua53/binary-trees/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} binarytrees.lua-2.lua 21
+	${BINARY} binarytrees.lua-2.lua 21 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} binarytrees.lua-2.lua 21
+	/usr/bin/time -v ${BINARY} binarytrees.lua-2.lua 21 >> /opt/measures/${TLANG}.txt
