--- a/lua53/pidigits/Makefile
+++ b/lua53/pidigits/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} pidigits.lua-5.lua 10000
+	${BINARY} pidigits.lua-5.lua 10000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} pidigits.lua-5.lua 10000
+	/usr/bin/time -v ${BINARY} pidigits.lua-5.lua 10000 >> /opt/measures/${TLANG}.txt
