Adding pipe to luajit measure

--- a/luajit/binary-trees/Makefile
+++ b/luajit/binary-trees/Makefile
@@ -1,13 +1,8 @@
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} binarytrees.lua-2.lua 21" Lua binary-trees
+	echo "luajit: nothing to do"
 
 run:
-	${BINARY} binarytrees.lua-2.lua 21
+	${BINARY} binarytrees.lua-2.lua 21 >> /opt/results/${TLANG}.txt
 
-mem:
-	/usr/bin/time -v ${BINARY} binarytrees.lua-2.lua 21
-
-valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} binarytrees.lua-2.lua 21
+measure:
+	/usr/bin/time -v ${BINARY} binarytrees.lua-2.lua 21 >> /opt/measures/${TLANG}.txt
