--- a/luajit/reverse-complement/Makefile
+++ b/luajit/reverse-complement/Makefile
@@ -1,13 +1,8 @@
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt" Lua reverse-complement
+	echo "luajit: nothing to do"
 
 run:
-	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
+	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
 
-mem:
-	/usr/bin/time -v ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
-
-valgrind:
-	valgrind --tool=massif --stacks=yes ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
+measure:
+	/usr/bin/time -v ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt >> /opt/measures/${TLANG}.txt
