Adding pipe to perl output

--- a/perl/binary-trees/Makefile
+++ b/perl/binary-trees/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} binarytrees.perl-3.perl 21
+	${BINARY} binarytrees.perl-3.perl 21 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v  ${BINARY} binarytrees.perl-3.perl 21
+	/usr/bin/time -v  ${BINARY} binarytrees.perl-3.perl 21 >> /opt/measures/${TLANG}.txt
