--- a/perl/fannkuch-redux/Makefile
+++ b/perl/fannkuch-redux/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} fannkuchredux.perl-2.perl 12
+	${BINARY} fannkuchredux.perl-2.perl 12 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} fannkuchredux.perl-2.perl 12
+	/usr/bin/time -v ${BINARY} fannkuchredux.perl-2.perl 12 >> /opt/measures/${TLANG}.txt
