--- a/perl/mandelbrot/Makefile
+++ b/perl/mandelbrot/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} mandelbrot.perl 16000
+	${BINARY} mandelbrot.perl 16000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} mandelbrot.perl 16000
+	/usr/bin/time -v ${BINARY} mandelbrot.perl 16000 >> /opt/measures/${TLANG}.txt
