--- a/perl/n-body/Makefile
+++ b/perl/n-body/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} nbody.perl-2.perl 50000000
+	${BINARY} nbody.perl-2.perl 50000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} nbody.perl-2.perl 50000000
+	/usr/bin/time -v ${BINARY} nbody.perl-2.perl 50000000 >> /opt/measures/${TLANG}.txt
