--- a/perl/pidigits/Makefile
+++ b/perl/pidigits/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	perl pidigits.perl-4.perl 10000
+	perl pidigits.perl-4.perl 10000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v perl pidigits.perl-4.perl 10000
+	/usr/bin/time -v perl pidigits.perl-4.perl 10000 >> /opt/measures/${TLANG}.txt
