--- a/perl/regex-redux/Makefile
+++ b/perl/regex-redux/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt
+	${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt
+	/usr/bin/time -v ${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt >> /opt/measures/${TLANG}.txt
