--- a/perl/reverse-complement/Makefile
+++ b/perl/reverse-complement/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
+	${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
+	/usr/bin/time -v ${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt >> /opt/measures/${TLANG}.txt
