--- a/perl/spectral-norm/Makefile
+++ b/perl/spectral-norm/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} spectralnorm.perl-4.perl 5500
+	${BINARY} spectralnorm.perl-4.perl 5500 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v  ${BINARY} spectralnorm.perl-4.perl 5500
+	/usr/bin/time -v  ${BINARY} spectralnorm.perl-4.perl 5500 >> /opt/measures/${TLANG}.txt
