--- a/perl/k-nucleotide/Makefile
+++ b/perl/k-nucleotide/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} knucleotide.perl 0 < /root/data/knucleotide-input25000000.txt
+	${BINARY} knucleotide.perl 0 < /root/data/knucleotide-input25000000.txt >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} knucleotide.perl 0 < /root/data/knucleotide-input25000000.txt
+	/usr/bin/time -v ${BINARY} knucleotide.perl 0 < /root/data/knucleotide-input25000000.txt >> /opt/measures/${TLANG}.txt
