--- a/python3/pidigits/Makefile
+++ b/python3/pidigits/Makefile
@@ -1,8 +1,8 @@
 compile:
-	cp pidigits.python3-2.python3 pidigits.python3-2.py
+	echo "nothing to do"
 
 run:
-	${BINARY} -OO pidigits.python3-2.py 10000 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO pidigits.py 10000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO pidigits.python3-2.py 10000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO pidigits.py 10000
