--- a/python2/reverse-complement/Makefile
+++ b/python2/reverse-complement/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO revcomp.py 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} -OO revcomp.py 0 < /root/data/revcomp-input25000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO revcomp.py 0 < /root/data/revcomp-input25000000.txt
