--- a/python2/binary-trees/Makefile
+++ b/python2/binary-trees/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO binarytrees.py 21 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO binarytrees.py 21 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO binarytrees.py 21
