--- a/python2/n-body/Makefile
+++ b/python2/n-body/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO nbody.py 50000000 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO nbody.py 50000000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO nbody.py 50000000
