--- a/python2/spectral-norm/Makefile
+++ b/python2/spectral-norm/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO spectralnorm.py 5500 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO spectralnorm.py 5500
